# GroundCrawler2

./: .gitignore
.github/workflows/: mechanical_export.yml  python_test_and_lint.yml
CAD/: AssemblyTrackLeft.FCStd  AssemblyTrackRight.FCStd  BridgeAndToleranceTester.stl.FCStd  CameraMount.stl.FCStd  DriveWheel.stl.FCStd  GroundCrawler2.FCStd  Hull.stl.FCStd  IdlerWheelLarge.stl.FCStd  IdlerWheelSmall.stl.FCStd  Track.stl.FCStd  TrackCoverLeft.FCStd  TrackCoverLeft.stl.FCStd  TrackCoverRight.FCStd  TrackCoverRight.stl.FCStd
CAD/ReferenceParts/: 18650.FCStd  ESP-32Cam.FCStd  N20.FCStd
Mechanical/CAD/: AssemblyTrackLeft.FCStd  BridgeAndToleranceTester.stl.FCStd  DriveWheel.stl.FCStd  IdlerWheelLarge.stl.FCStd  Track.stl.FCStd  TrackCoverLeft.stl.FCStd
Mechanical/CAD/ReferenceParts/: ESP-32Cam.FCStd
Mechanical/tools/: export_freecad.py
Software/ESP32/ChassisController/: ChassisController.ino  app_server.cpp  chassis.cpp
Software/GroundStation/: image_patch.py  poll.py  pyproject.toml
Software/OnlineLearning/: README.md  chassis.py  main.py  pyproject.toml
Software/OnlineLearning/ai/prediction/: TimeSeriesMemory.py
Software/OnlineLearning/ai/vision/: DynamicMemory.py  DynamicMemory_test.py  EncoderDecoderModel.py  VideoLoader.py  VisionSystem.py  image_util.py  train.py  video_config.py
Software/OnlineLearning/util/: fancy_log.py
Software/OnlineLearning/webserver/: app.py
