[project]
name = "pytorch-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "matplotlib>=3.9.3",
    "opencv-python>=4.10.0.84",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.34.0",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "ruff>=0.8.6",
]
